[package]
name = "jitcompiler2"
version = "0.1.0"
authors = ["iqbigbang <iqbigbang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.52.0"
lalrpop = "0.17.2"

[dependencies]
libc = "0.2"
lalrpop-util = "0.17.2"
regex = "0.2.0"
either = "1.5.3"